# nester

./: .env.example  .vulnignore  AUDIT_THREAT_MODEL.md  CI_CD_VALIDATION_REPORT.md  OSS_CLEANUP.md  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  pnpm-lock.yaml
.github/workflows/: ci.yml  contract-audit.yml  security.yml
apps/api/: .env.example  Dockerfile.dev  go.mod
apps/api/migrations/: 017_list_endpoint_indices.down.sql  017_list_endpoint_indices.up.sql  020_update_users_table.down.sql  020_update_users_table.up.sql  021_add_user_roles.up.sql  022_create_event_indexer_tables.down.sql  022_create_event_indexer_tables.up.sql  024_create_user_watchlist.down.sql  024_create_user_watchlist.up.sql  024_create_vault_rebalances.down.sql  024_create_vault_rebalances.up.sql  024_create_vault_tvl_snapshots.down.sql  024_create_vault_tvl_snapshots.up.sql  024_kyc_workflow.down.sql  024_kyc_workflow.up.sql  README.md  (+8 more)
apps/intelligence/: .env.example  pyproject.toml  requirements.txt
apps/intelligence/app/: config.py  main.py
apps/intelligence/app/dependencies/: auth.py
apps/intelligence/app/models/: __init__.py  coaching.py  recommendation.py  savings.py
apps/intelligence/app/routers/: analyze.py  coaching.py  savings.py  ws_chat.py
apps/intelligence/app/services/: coingecko.py  conversation_store.py  defillama.py  prometheus.py  savings_service.py  vault_context.py
apps/intelligence/tests/: test_coaching.py  test_coingecko.py  test_defillama.py  test_recommendation.py  test_savings_service.py
scripts/: contract-audit.sh  seed.sql
(+176 files in other folders)
