[project]
name = "nester-intelligence"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["slowapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cachetools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
